add TableTask interface and classes, new unit tests, fix and update old tests, add fake to the Row interface, code cleanup and