@@ -45,85 +45,51 @@
  */
 package com.teragrep.hbs_03.hbase.mutator;
 
-import com.teragrep.hbs_03.hbase.MetaRow;
-
-import com.teragrep.hbs_03.sql.MockS3MetaData;
+import com.teragrep.hbs_03.hbase.Row;
 import org.apache.hadoop.hbase.TableName;
 import org.apache.hadoop.hbase.client.BufferedMutatorParams;
 import org.apache.hadoop.hbase.client.Put;
-import org.jooq.DSLContext;
-import org.jooq.Record21;
-import org.jooq.SQLDialect;
-import org.jooq.impl.DSL;
-import org.jooq.tools.jdbc.MockConnection;
-import org.jooq.types.UInteger;
-import org.jooq.types.ULong;
-import org.junit.Assert;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.sql.Date;
-import java.sql.Timestamp;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public final class MutatorParamsSourceFromListTest {
 
-    // SQL Mock
-    final MockS3MetaData provider = new MockS3MetaData();
-    final MockConnection connection = new MockConnection(provider);
-    final DSLContext ctx = DSL.using(connection, SQLDialect.MYSQL);
-
     @Test
     public void testTableName() {
-        final Put row = new MetaRow(
-                (Record21<ULong, Date, Date, String, String, String, String, String, Timestamp, ULong, String, String, String, String, String, String, ULong, UInteger, String, String, Long>) ctx
-                        .fetch("ONE_ROW")
-                        .get(0)
-        ).put();
-        final List<Put> puts = Arrays.asList(row);
-
+        final Row row = new Row.FakeRow();
+        final List<Put> puts = List.of(row.put());
         final TableName name = TableName.valueOf("test");
         final BufferedMutatorParams params = new MutatorParamsSourceFromList(name, puts).value();
-
         Assertions.assertEquals(name, params.getTableName());
     }
 
     @Test
     public void testMinimumSize() {
-        final Put row = new MetaRow(
-                (Record21<ULong, Date, Date, String, String, String, String, String, Timestamp, ULong, String, String, String, String, String, String, ULong, UInteger, String, String, Long>) ctx
-                        .fetch("ONE_ROW")
-                        .get(0)
-        ).put();
-        final List<Put> puts = Arrays.asList(row);
-
+        final Row row = new Row.FakeRow();
+        final List<Put> puts = List.of(row.put());
         final long minimumSize = 2 * 1024 * 1024; // 2MB
         final long bufferSize = new MutatorParamsSourceFromList(TableName.valueOf("test"), puts, 2.0)
                 .value()
                 .getWriteBufferSize();
-        Assert.assertEquals(minimumSize, bufferSize);
+        Assertions.assertEquals(minimumSize, bufferSize);
     }
 
     @Test
     public void testDynamicSize() {
-        final Put row = new MetaRow(
-                (Record21<ULong, Date, Date, String, String, String, String, String, Timestamp, ULong, String, String, String, String, String, String, ULong, UInteger, String, String, Long>) ctx
-                        .fetch("ONE_ROW")
-                        .get(0)
-        ).put();
+        final Row row = new Row.FakeRow();
         final int rowListSize = 1000;
         final double overheadMultiplier = 3.0;
         final List<Put> rowList = new ArrayList<>(rowListSize);
         for (int i = 0; i < rowListSize; i++) {
-            rowList.add(row);
+            rowList.add(row.put());
         }
-        final long estimatedBufferSize = Math.round(rowListSize * (row.heapSize() * overheadMultiplier));
-        long bufferSize = new MutatorParamsSourceFromList(TableName.valueOf("test"), rowList, overheadMultiplier)
+        final long estimatedBufferSize = Math.round(rowListSize * (row.put().heapSize() * overheadMultiplier));
+        final long bufferSize = new MutatorParamsSourceFromList(TableName.valueOf("test"), rowList, overheadMultiplier)
                 .value()
                 .getWriteBufferSize();
-        Assert.assertEquals(estimatedBufferSize, bufferSize);
+        Assertions.assertEquals(estimatedBufferSize, bufferSize);
     }
-
 }
